Fix spacing in some elements

--- a/scss/layout/_program.scss
+++ b/scss/layout/_program.scss
@@ -11,7 +11,7 @@
   ul {
     @include flexCenter();
 
-    gap: 1em;
+    gap: 0.2em;
     list-style: none;
     padding: 1em;
     align-items: normal;
